[gd_scene load_steps=2 format=3 uid="uid://r4mb4gxpvnhn"]

[ext_resource type="Script" uid="uid://fk8lq344oy8p" path="res://scripts/login.gd" id="1_cau7c"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cau7c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.0
offset_top = -633.0
offset_right = 302.0
offset_bottom = -167.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0.41382846, 0.41390425, 1)
theme_override_font_sizes/normal_font_size = 60
text = "Djipi Club"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerNameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Votre pseudo"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RegisterButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "S'inscrire"

[node name="LoginButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Se connecter"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "---"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
